# GameEngine

./: .gitignore  .tokeignore  CMakeLists.txt  compile.sh  create_compile_commands.sh  imgui.ini  tasks.md
Data/: collision_data.ini  configs.ini  map_data.ini  player_data.ini  sprites_data.ini
Maps/: level_1.txt
assets/: TilledGrass.tsx  grass.tsx  testtt.json  tile_atlas.tsx
build_ios/: cmake_install.cmake
build_ios/CMakeScripts/: ReRunCMake.make
build_ios/ComfyGameEngine.xcodeproj/: project.pbxproj
build_ios/SDL2/: cmake_install.cmake  cmake_uninstall.cmake  sdl2-config  sdl2.pc
build_ios/SDL2/CMakeScripts/: ReRunCMake.make
client/: '  CMakeLists.txt  compile_commands.json
client/.cache/clangd/index/: SDL.h.BDEE81DCC11916B8.idx  SDL_assert.h.D2BB7194EF4615B4.idx  SDL_atomic.h.6E64E6B63E48E722.idx  SDL_audio.h.1B6269EE005FBF38.idx  SDL_blendmode.h.45524933CA88A745.idx  SDL_clipboard.h.479DF1445BD813DA.idx  SDL_config.h.31EDA24670B37A21.idx  SDL_config_macosx.h.642ADAB360122CAF.idx  SDL_cpuinfo.h.6C8F0A21DF39B91A.idx  SDL_endian.h.DA70CF846272A151.idx  SDL_error.h.09D6137FFDFA2E07.idx  SDL_events.h.229C701ECFA5C1F8.idx  SDL_filesystem.h.ADB9193627352381.idx  SDL_gamecontroller.h.D74DF54C3EEF1888.idx  SDL_gesture.h.F1A225FB6D92BB82.idx  SDL_guid.h.5880E5B08C7DD816.idx  SDL_haptic.h.CF0D3D009B0D85FF.idx  SDL_hidapi.h.2B9D620ACC9989FF.idx  SDL_hints.h.2465D177C7A40B57.idx  SDL_joystick.h.B6612B75AF40FC88.idx  SDL_keyboard.h.20727D23BC18B541.idx  SDL_keycode.h.70FBEFC14155C603.idx  SDL_loadso.h.AA53AC554A925E0E.idx  SDL_locale.h.7103136FC08CF421.idx  SDL_log.h.ADF48C0FA35EC010.idx  SDL_main.h.C0F9A1D42F87B423.idx  SDL_messagebox.h.6BE291CFD3F30833.idx  SDL_metal.h.86C135E76D9D86F1.idx  SDL_misc.h.F10A813F2D095F83.idx  SDL_mouse.h.D3D8DAB39B8C0E25.idx  SDL_mutex.h.ADD0C4BE2DA347DD.idx  SDL_pixels.h.99BCC6E09BA24C36.idx  SDL_platform.h.9328575C0B9E4CA1.idx  SDL_power.h.5B3FBB22F5070AC7.idx  SDL_quit.h.2087BF299D83C481.idx  SDL_rect.h.475CDA4A668FE402.idx  SDL_render.h.A29C7FB6D705BAEA.idx  SDL_rwops.h.0649798151AF53F2.idx  SDL_scancode.h.417D689C4C9CE9B5.idx  SDL_sensor.h.B335FB3A3F08480F.idx  (+32 more)
client/Assets/: tile_atlas.xcf
client/Maps/: level_1.txt
client/include/: configs.h
client/include/client/: client.h  packet.h
client/include/core/: block.h  map_loader.h  sprite.h  world.h
client/include/rendering/: sprite.h  texture.h  ui.h
client/include/sandbox/: sandbox.h
client/include/shared/: commands.h  game.h  player.h  start_game.h
client/scripts/: run.sh
client/src/: configs.cpp  main.cpp
client/src/client/: client.cpp  packet.cpp
client/src/core/: block.cpp  map_loader.cpp  world.cpp
client/src/rendering/: sprite.cpp  texture.cpp  ui.cpp
client/src/sandbox/: sandbox.cpp
client/src/shared/: commands.cpp  game.cpp  player.cpp  start_game.cpp
include/: TSDL.h  Vec2.h  comfy_lib.h  comfy_lib.zig  debug_gui.h  game.h
include/core/: block.h  map_loader.h  world.h
include/rendering/: sprite.h  ui.h
include/shared/: game.h  player.h  start_game.h
include/utils/: camera.h  sprite.h
prototype/inventory_system/: '  .clang-format  CMakeLists.txt  compile.sh  imgui.ini
prototype/inventory_system/Data/: collision_data.ini  map_data.ini  player_data.ini  sprites_data.ini
prototype/inventory_system/assets/: TilledGrass.tsx  grass.tsx  map.json  map.tiled-session  map.tmx  testtt.tmx  untitled.t-project.tiled-session
prototype/inventory_system/include/: TSDL.h  Vec2.zig  comfy_lib.h  comfy_lib.zig  debug_gui.h  game.h  gui_values.h  player.h
prototype/inventory_system/include/engine/: GameEngine.h  MainView.h
prototype/inventory_system/include/engine/ui/: file_explorer.h  inspector.h  toolbar.h  ui_element.h  ui_manager.h
prototype/inventory_system/include/entity/: entity.h  player.h
prototype/inventory_system/include/utils/: camera.h  collision.h  facing.h  sprite.h
prototype/inventory_system/src/: TSDL.cpp  comfy_lib.cpp  debug_gui.cpp  game.cpp  main.cpp  player.cpp
prototype/inventory_system/src/engine/: GameEngine.cpp  MainView.cpp
prototype/inventory_system/src/engine/ui/: file_explorer.cpp  inspector.cpp  toolbar.cpp  ui_manager.cpp
prototype/inventory_system/src/entity/: player.cpp
prototype/inventory_system/src/gui/: debug_gui.cpp  debug_gui_logs.cpp  debug_gui_map.cpp  debug_gui_players.cpp  debug_gui_textures.cpp
prototype/inventory_system/src/gui/utils/: debug_gui_sprites.cpp
prototype/inventory_system/src/utils/: camera.cpp  collision.cpp  sprite.cpp
scripts/: build_client.sh  build_server.sh  clean_all.sh  clean_client.sh  clean_server.sh  run_client.sh  run_server.sh
server/: CMakeLists.txt  compile_commands.json
server/.cache/clangd/index/: _filesec_t.h.A28F232531309C9F.idx  _o_dsync.h.9CFA6820543D083F.idx  _o_sync.h.32BE90FC83AB1257.idx  _param.h.995338E52CF95A2C.idx  _param.h.ED49BB22919287C5.idx  _posix_vdisable.h.668E0F5BD365BF1D.idx  _s_ifmt.h.10A9A6C83D088A15.idx  _sa_family_t.h.584D9B3E710C6A85.idx  _select.h.61D270EB6FF96EFF.idx  fcntl.h.6E74AE2AC7742A71.idx  fcntl.h.AEDCDB984A4AA50E.idx  in6.h.1FA52F51D5388BA2.idx  inet.h.28EAA55789B8FE82.idx  main.cpp.EE5F9DAF87E053BB.idx  net_kev.h.F610DB8A69FB18D8.idx  packet.h.891D697EF72019DD.idx  player.h.80C02D6E28A4E542.idx  select.h.A0C628C8AFF94128.idx  socket.h.3B3A514710AB9D45.idx  stddef.h.D7FDCCF608A66AD1.idx  this_thread.h.C44BA1B4A5B23E75.idx  udp_server.cpp.051F370825D25D3D.idx  udp_server.h.C35CC863841B730B.idx  unistd.h.599EAAF0B0DDCEBB.idx  unistd.h.B33A029DEDF71E8F.idx
server/include/: block.h  config.h  packet.h  player.h  udp_server.h
server/scripts/: clean.sh  compile.sh  create_compile_commands.sh  run.sh
server/src/: #main.cpp#  #packet.cpp#  block.cpp  main.cpp  packet.cpp  player.cpp  udp_server.cpp
src/: TSDL.cpp  comfy_lib.cpp  configs.cpp  game.cpp  main.cpp
src/core/: world.cpp
src/entity/: player.cpp
src/gui/: debug_gui.cpp  debug_gui_layers.cpp  debug_gui_logs.cpp
src/rendering/: ui.cpp
src/shared/: commands.cpp  game.cpp  player.cpp  start_game.cpp
src/utils/: camera.cpp
(+4 files in other folders)
